--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,6 +1,9 @@
 mode: Mainline
+next-version: 1.0.1
 merge-message-formats: {}
 branches:
   main:
     increment: Patch
     is-mainline: true
+
+ eq(variables['Build.SourceBranch'], 'refs/heads/main')
