Add git version tasks for next tag calculation, fix syntax

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -6,4 +6,4 @@ branches:
     increment: Patch
     is-mainline: true
 
- eq(variables['Build.SourceBranch'], 'refs/heads/main')
+ #eq(variables['Build.SourceBranch'], 'refs/heads/main')
