--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+    - checkout: self
+      fetchDepth: 0
 
     - task: gitversion/setup@0
       inputs:
